Portfolio First Commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World.
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+
+    
+    
+    <div class="container" id="main-content">
+        <!-- Vertical Sidebar -->
+        <div class="sidebar">
+            <div class="sidebar-content">
+                <p class="vertical-text">BIENVENUE</p>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <nav class="navigation">
+            <a href="work.html">PROJETS</a>
+            <a href="about.html">MOI</a>
+            <a href="#contact">CONTACT</a>
+        </nav>
+        <section class="info">
+            <p class="name">SAMI SAOUD</p>
+            <p class="details">Actuellement étudiant à 
+                <a href="https://www.univ-rennes.fr" target="_blank">l'Université de Rennes</a>
+            </p>
+        </section>
+    </div>
+    <script src="js/index.js"></script>
+</body>
+</html>
