--- a/work.html
+++ b/work.html
@@ -18,9 +18,9 @@
         </div>
         <!-- Left Side - Description -->
         <div class="work-description">
-            <h2>WORK</h2>
-            <p>This is a showcase of my best work in a variety of fields including Graphic and Web Design, No-Code Development, Product Design, and Product Management.</p>
-            <p>The world of digital design and development is constantly evolving, and so has my role over the last 15 years. I’m still learning and gaining new skills every day.</p>
+            <h2>PROJETS</h2>
+            <p>Ces projets ont été pour la plupart réalisés pendant ma Licence Informatique à Rennes.</p>
+            <p>Pendant ces trois années, j'ai pu acquérir de l'expérience en programmation, ce qui me permet de toujours améliorer mes projets.</p>
         </div>
 
         <!-- Right Side - Projects -->
