Jeu intégré et quelques changements

--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Sami SAOUD</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="imgs/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
     <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
 
     <!-- Main Container -->
-    <div class="about-container">
+    <div class="about-container" id="about-section">
         <!-- Vertical Sidebar -->
         <div class="sidebar">
             <div class="sidebar-content">
@@ -30,19 +31,19 @@
             <!-- Left Column -->
             <div class="column left">
                 <h2>Ma passion</h2>
-                <p>Je suis un passioné du jeu vidéo depuis ma tendre enfance, et de l'informatique en général. J'essaie de créer mes propres jeux pendant mon temps libre, que ce soit sur Godot, Unity ou encore Unreal Engine.</p>
+                <p>Je suis un passioné du jeu vidéo depuis ma tendre enfance, et de l'informatique en général. Je crée mes propres jeux pendant mon temps libre, que ce soit sur Godot, Unity ou encore Unreal Engine.</p>
             </div>
 
             <!-- Right Column -->
             <div class="column right">
                 <h2>Mes capacités</h2>
-                <p>J'ai des compétences diverses en Python, HTML, CSS, Javascript, Java, et quelques bases en C.</p>
+                <p>J'ai des compétences diverses en Python, HTML, CSS, Javascript, Java, et des bases en C.</p>
             </div>
 
         </div>
 
         <div class="button-container">
-            <a href="imgs/cv_sami.pdf" class="button" target="_blank">My CV</a>
+            <a href="imgs/cv_sami.pdf" class="button" target="_blank">Mon CV</a>
         </div>
     </div>
 
