--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OKALPHA Project</title>
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="../imgs/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
     <link rel="stylesheet" href="../css/workspages.css">
 </head>
