--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
                 <a href="projets/gen-projet.html"><h1>PROJET GEN</h1></a>
                 <p>– Université de Rennes </p>
             </div>
-            <div class="project" data-image="imgs\2.jpg">
+            <div class="project" data-image="imgs\sitePortfolio1.png">
                 <a href="projets/portfolio-website.html"><h1>SITE PORTFOLIO</h1></a>
                 <p>– Web Design </p>
             </div>
