--- a/projets/nuit-info.html
+++ b/projets/nuit-info.html
@@ -23,20 +23,22 @@
     </div>
     <!-- Description and roles section -->
     <div class="content-section">
-        <p class="description">Projet de modélisation 3D créé au sein de l'école Creative Seeds, à l'occasion d'une spécialité en L2.</p>
+        <p class="description">Projet de Serious Game pendant l'évènement de La Nuit de l'Info.</p>
         <div class="roles">
             <div class="role-item">
                 <span class="role-title">ROLE</span>
-                <p>Indépendant</p>
+                <p>Programmeur, Scénariste</p>
             </div>
             <div class="role-item">
                 <span class="role-title">RESPONSABILITES</span>
-                <p>Design, Modeling, Animation, Level Design</p>
+                <p>Scnéario, Design</p>
             </div>
+            <!-- 
             <div class="role-item">
                 <span class="role-title">URL</span>
                 <p><a href="" >Github</a></p>
             </div>
+            --> 
         </div>
     </div>
 
