--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -23,7 +23,7 @@
     </div>
     <!-- Description and roles section -->
     <div class="content-section">
-        <p class="description">Projet de modélisation 3D créé au sein de l'école Creative Seeds, à l'occasion d'une spécialité en L2.</p>
+        <p class="description">Un site web portfolio simpliste. </p>
         <div class="roles">
             <div class="role-item">
                 <span class="role-title">ROLE</span>
@@ -31,23 +31,22 @@
             </div>
             <div class="role-item">
                 <span class="role-title">RESPONSABILITES</span>
-                <p>Design, Modeling, Animation, Level Design</p>
+                <p>Design, Programming</p>
             </div>
+            <!-- 
             <div class="role-item">
                 <span class="role-title">URL</span>
                 <p><a href="" >Github</a></p>
             </div>
+            --> 
         </div>
     </div>
 
     <!-- Bottom image gallery -->
     <div class="image-gallery">
-        <img src="../imgs/1.jpg" alt="Image 1" class="wide">
-        <img src="../imgs/2.jpg" alt="Image 2" class="normal"> <!-- Image large (600x300) -->
-        <img src="../imgs/3.jpg" alt="Image 3" class="normal">
-        <img src="../imgs/1.jpg" alt="Image 4" class="wide">
-        
+        <img src="../imgs/sitePortfolioCapture.png" alt="Image 1" class="large">
     </div>
+    <p class="description">Un site web portfolio simpliste. </p>
     
 
     <script src="js/workspages.js"></script>
