--- a/projets/site-asso.html
+++ b/projets/site-asso.html
@@ -23,7 +23,7 @@
     </div>
     <!-- Description and roles section -->
     <div class="content-section">
-        <p class="description">Projet de modélisation 3D créé au sein de l'école Creative Seeds, à l'occasion d'une spécialité en L2.</p>
+        <p class="description">Site web pour l'association ASA35.</p>
         <div class="roles">
             <div class="role-item">
                 <span class="role-title">ROLE</span>
@@ -31,12 +31,14 @@
             </div>
             <div class="role-item">
                 <span class="role-title">RESPONSABILITES</span>
-                <p>Design, Modeling, Animation, Level Design</p>
+                <p>Design, Programming</p>
             </div>
+            <!-- 
             <div class="role-item">
                 <span class="role-title">URL</span>
                 <p><a href="" >Github</a></p>
             </div>
+            --> 
         </div>
     </div>
 
