Ajout de vidéos

--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -46,7 +46,16 @@
     <div class="image-gallery">
         <img src="../imgs/sitePortfolioCapture.png" alt="Image 1" class="large">
     </div>
-    <p class="description">Un site web portfolio simpliste. </p>
+    <p class="description">Ce site m'a permis de découvrir les cartes ainsi que les sliders.</p>
+    
+    <div class="video-container">
+        <video autoplay loop muted playsinline style>
+            <source src="../imgs/portfolio2.mp4" type="video/mp4">
+            Votre navigateur ne supporte pas les vidéos HTML5.
+        </video>
+    </div>
+    <p class="description">Une deuxième version du site créée avec un carousel d'images.</p>
+
     
 
     <script src="js/workspages.js"></script>
