Changements sur les projets.

--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -6,6 +6,7 @@
     <title>Sami SAOUD</title>
     <link rel="icon" type="image/png" href="../imgs/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
     <link rel="stylesheet" href="../css/workspages.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
     </div>
     <!-- Description and roles section -->
     <div class="content-section">
-        <p class="description">Un site web portfolio simpliste. </p>
+        <p class="description">Un site web portfolio <BR> simpliste, que j'ai créé en <BR> tant qu'entraînement au CSS. </p>
         <div class="roles">
             <div class="role-item">
                 <span class="role-title">ROLE</span>
@@ -46,7 +47,7 @@
     <div class="image-gallery">
         <img src="../imgs/sitePortfolioCapture.png" alt="Image 1" class="large">
     </div>
-    <p class="description">Ce site m'a permis de découvrir les cartes ainsi que les sliders.</p>
+    <p class="image-description">Ce site m'a permis de découvrir les <strong>cartes</strong> ainsi que les <strong>sliders</strong>. <br> Une difficulté que j'ai réussi à relever, même avec mon peu de connaissances sur le sujet à ce moment donné !</p>
     
     <div class="video-container">
         <video autoplay loop muted playsinline style>
@@ -54,7 +55,7 @@
             Votre navigateur ne supporte pas les vidéos HTML5.
         </video>
     </div>
-    <p class="description">Une deuxième version du site créée avec un carousel d'images.</p>
+    <p class="image-description">Une deuxième version du site créée avec un <strong>carousel</strong> d'images.  </p>
 
     
 
