Ajout des 3 pages responsives, ajout de fonctionnalités pour le jeu.

--- a/projets/gen-projet.html
+++ b/projets/gen-projet.html
@@ -6,6 +6,8 @@
     <title>Sami SAOUD</title>
     <link rel="icon" type="image/png" href="../imgs/favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
+
     <link rel="stylesheet" href="../css/workspages.css">
 </head>
 <body>
