--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
 
         
         <nav class="navigation">
-            <a href="work.html">PROJETS</a> <!-- Utilisé comme plateforme -->
+            <a href="work.html" class="responsive-text"><span class="first-part">PRO</span><span class="second-part">JETS</span></a>
             <a href="about.html" id="littlenav">MOI</a> <!-- Utilisé comme plateforme -->
-            <a href="contact.html">CONTACT</a> <!-- Utilisé comme plateforme -->
-        </nav>
+            <a href="contact.html" class="responsive-text"><span class="first-part">CON</span><span class="second-part">TACT</span></a>        </nav>
         <section class="info">
             <p class="name">SAMI SAOUD</p>
-            <p class="details">Actuellement étudiant à 
+            <p class="details">Actuellement étudiant à <br>
                 <a href="https://www.univ-rennes.fr" target="_blank">l'Université de Rennes</a>
             </p>
         </section>
@@ -55,8 +54,7 @@
         <div class="platform" id="top-platform"></div>
         <div class="platform" id="bottom-platform"></div>
         <div class="platform" id="left-platform"></div>
-        <div class="platform" id="right-platform"></div
-            >
+        <div class="platform" id="right-platform"></div>
         <div class="platform" id="first-platform"></div>
         <div class="platform" id="second-platform"></div>
         <div class="platform" id="third-platform"></div>
