--- a/projets/nuit-info.html
+++ b/projets/nuit-info.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sami SAOUD</title>
     <link rel="icon" type="image/png" href="../imgs/favicon.png" />
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
     <link rel="stylesheet" href="../css/workspages.css">
 </head>
