Ajout du texte F11.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p class="vertical-text">© 2024</p>
             </div>
         </div>
-
+        <div class="f11">F11 pour une meilleure expérience.</div>
         <section class="controls">
             <div class="key-row">
                 <div class="key">↑</div>
