Ajouts de projets.

--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
     <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
     <link rel="stylesheet" href="../css/workspages.css">
+
+
 </head>
 <body>
     <!-- Initial animated brown rectangle with title -->
