--- a/work.html
+++ b/work.html
@@ -31,27 +31,32 @@
 
         <!-- Right Side - Projects -->
         <div class="work-projects">
-            <div class="project" data-image="imgs\2.jpg">
-                <a href="projets/creative-seeds.html"><h1>CREATIVE SEEDS</h1></a>
+            <div class="project project-green" data-image="imgs/doingIt.png">
+                <a href=""><h1>CREATIVE SEEDS</h1></a>
                 <p>– Production en Temps Réel</p>
             </div>
-            <div class="project" data-image="imgs\3.jpg">
-                <a href="projets/gen-projet.html"><h1>PROJET GEN</h1></a>
-                <p>– Université de Rennes </p>
-            </div>
-            <div class="project" data-image="imgs\sitePortfolio1.png">
+            <div class="project project-pink" data-image="imgs/sitePortfolio1.png">
                 <a href="projets/portfolio-website.html"><h1>SITE PORTFOLIO</h1></a>
                 <p>– Web Design </p>
             </div>
-            <div class="project" data-image="imgs\3.jpg">
-                <a href="projets/nuit-info.html"><h1>NUIT DE L'INFO</h1></a>
-                <p>– Serious Game Dev</p>
-            </div>
-            <div class="project" data-image="imgs\2.jpg">
-                <a href="projets/site-asso.html"><h1>SITE ASSO</h1></a>
+            <div class="project project-green" data-image="imgs/doingIt.png">
+                <a href=""><h1>SITE ASSO</h1></a>
                 <p>– Web Design</p>
             </div>
+            <div class="project project-brown" data-image="imgs/donutsLogo.png">
+                <a href="projets/site_boutique.html"><h1>SITE BOUTIQUE</h1></a>
+                <p>– Interface de connexion</p>
+            </div>
+            <div class="project project-blue" data-image="imgs/doingIt.png">
+                <a href=""><h1>PROJET GEN</h1></a>
+                <p>– Interface d'app </p>
+            </div>
+            <div class="project project-red" data-image="imgs/doingIt.png">
+                <a href=""><h1>ANTI-CASINO</h1></a>
+                <p>– Serious Game Dev</p>
+            </div>
         </div>
+        
     </div>
 
     <script src="js/work.js"></script>
