--- a/work.html
+++ b/work.html
@@ -29,34 +29,33 @@
             </div>
         </div>
 
-        <!-- Right Side - Projects -->
-        <div class="work-projects">
-            <div class="project project-green" data-image="imgs/doingIt.png">
-                <a href=""><h1>CREATIVE SEEDS</h1></a>
-                <p>– Production en Temps Réel</p>
-            </div>
-            <div class="project project-pink" data-image="imgs/sitePortfolio1.png">
-                <a href="projets/portfolio-website.html"><h1>SITE PORTFOLIO</h1></a>
-                <p>– Web Design </p>
-            </div>
-            <div class="project project-green" data-image="imgs/doingIt.png">
+         <!-- Right Side - Projects -->
+         <div class="work-projects">
+            <div class="project project-green" data-image="imgs/doingIt.png" data-title="SITE ASSO" data-description="Un design pour le site d'une association.">
                 <a href=""><h1>SITE ASSO</h1></a>
                 <p>– Web Design</p>
             </div>
-            <div class="project project-brown" data-image="imgs/donutsLogo.png">
-                <a href="projets/site_boutique.html"><h1>SITE BOUTIQUE</h1></a>
+            <div class="project project-green" data-image="imgs/doingIt.png" data-title="CREATIVE SEEDS" data-description="Un projet de modélisation 3D utilisant Maya, Substance, Mixamo, et Unreal Engine.">
+                <a href=""><h1>CREATIVE SEEDS</h1></a>
+                <p>– Production en Temps Réel</p>
+            </div>
+            <div class="project project-pink" data-image="imgs/portfolioImages/sitePortfolio1.png" data-title="SITE PORTFOLIO" data-description="Un design de site web pour un portfolio.">
+                <a href="projets/portfolio-website.html"><h1>SITE PORTFOLIO</h1></a>
+                <p>– Web Design </p>
+            </div>
+            
+            <div class="project project-brown" data-image="imgs/boutiqueProjet/donutsLogo.png" data-title="SITE BOUTIQUE" data-description="Projet qui utilise des serveurs codés en Python, pour créer une page de connexion.">
+                <a href="projets/site-boutique.html"><h1>SITE BOUTIQUE</h1></a>
                 <p>– Interface de connexion</p>
             </div>
-            <div class="project project-blue" data-image="imgs/doingIt.png">
-                <a href=""><h1>PROJET GEN</h1></a>
+            <div class="project project-blue" data-image="imgs/genProjet/gen5.png" data-title="PROJET GEN" data-description="Projet de Génie Logiciel qui consistait à créer une application qui utilise une API pour trouver et comparer des stations essence.">
+                <a href="projets/gen-projet.html"><h1>PROJET GEN</h1></a>
                 <p>– Interface d'app </p>
             </div>
-            <div class="project project-red" data-image="imgs/doingIt.png">
-                <a href=""><h1>ANTI-CASINO</h1></a>
-                <p>– Serious Game Dev</p>
+            <div class="project project-red" data-image="imgs/nsiImages/monke.png" data-title="ANTI-CASINO" data-description="Site web et mini-jeux créés lors d'un projet de NSI en Terminale pour sensibiliser à l'addiction des jeux d'argent.">
+                <a href="projets/jeu-nsi.html"><h1>ANTI-CASINO</h1></a>
+                <p>– Web / Python Game Dev</p>
             </div>
-        </div>
-        
     </div>
 
     <script src="js/work.js"></script>
