Finitions des projets.

--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -38,7 +38,7 @@
     </div>
     <!-- Description and roles section -->
     <div class="content-section">
-        <p class="description">Un site web portfolio <BR> simpliste, que j'ai créé en <BR> tant qu'entraînement au CSS. </p>
+        <p class="description">Un site web portfolio <BR> vitrine, que j'ai créé pour m'améliorer <BR> en programmation CSS. </p>
         <div class="roles">
             <div class="role-item">
                 <span class="role-title">ROLE</span>
