--- a/work.html
+++ b/work.html
@@ -35,8 +35,8 @@
                 <a href=""><h1>SITE ASSO</h1></a>
                 <p>– Web Design</p>
             </div>
-            <div class="project project-green" data-image="imgs/doingIt.png" data-title="CREATIVE SEEDS" data-description="Un projet de modélisation 3D utilisant Maya, Substance, Mixamo, et Unreal Engine.">
-                <a href=""><h1>CREATIVE SEEDS</h1></a>
+            <div class="project project-green" data-image="imgs\creativeSeeds\SAOUD_Sami_1.jpg" data-title="CREATIVE SEEDS" data-description="Un projet de modélisation 3D utilisant Maya, Substance, Mixamo, et Unreal Engine.">
+                <a href="projets/creative-seeds.html"><h1>CREATIVE SEEDS</h1></a>
                 <p>– Production en Temps Réel</p>
             </div>
             <div class="project project-pink" data-image="imgs/portfolioImages/sitePortfolio1.png" data-title="SITE PORTFOLIO" data-description="Un design de site web pour un portfolio.">
