--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="contact.html" class="responsive-text"><span class="first-part">CON</span><span class="second-part">TACT</span></a>        </nav>
         <section class="info">
             <p class="name">SAMI SAOUD</p>
-            <p class="details">Actuellement étudiant à <br>
+            <p class="details">Actuellement étudiant en Informatique à <br>
                 <a href="https://www.univ-rennes.fr" target="_blank">l'Université de Rennes</a>
             </p>
         </section>
