--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -11,6 +11,7 @@
 
     <style>
         * {color: white; }
+        body{background-color: #1a1818;}
         .title{color: #1a1818;}
         .roles span{color: #ffffff;}
         .roles p{color: #ffffff;}
@@ -21,10 +22,12 @@
         .brown-rectangle{background-color: #d5c4fc;}
         .initial-section{background-color: #1a1818;}
         .footer{background-color: #1a1818;}
+        .sidebar a::before {background-color: #ffffff;}
+        .divider{background-color: #ffffff;}
     </style>
 </head>
 <body>
-    <!-- Initial animated brown rectangle with title -->
+    <div class="container">
     <div class="initial-section">
         <div class="brown-rectangle"></div>
         <h1 class="title">SITE WEB </br> PORTFOLIO</h1>
@@ -81,7 +84,7 @@
     <footer class="footer">
         <p>Site créé par Sami :)</p>
     </footer>
-
+</div>
     <script src="js/workspages.js"></script>
 </body>
 </html>
