--- a/projets/site-boutique.html
+++ b/projets/site-boutique.html
@@ -11,10 +11,12 @@
 
     <style>
         .brown-rectangle{background-color: #ba9368;}
+        .title{color: #ffffff;}
+        .content-section{background-color: #ffffff;}
     </style>
 </head>
 <body>
-    <!-- Initial animated brown rectangle with title -->
+    <div class="container">
     <div class="initial-section">
         <div class="brown-rectangle"></div>
         <h1 class="title">SITE WEB </br> BOUTIQUE</h1>
@@ -66,6 +68,7 @@
     <footer class="footer">
         <p>Site créé par Sami :)</p>
     </footer>
+</div>
     <script src="js/workspages.js"></script>
 </body>
 </html>
