--- a/projets/gen-projet.html
+++ b/projets/gen-projet.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/workspages.css">
     <style>
         .title {color: #ffffff;}
+        .sidebar-content{color: #ffffff;}
         .content-section{background-color: #ffffff;}
         .image-gallery{background-color: #ffffff;}
         .image-description{background-color: #ffffff;}
@@ -20,6 +21,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <div class="initial-section">
         <div class="brown-rectangle"></div>
         <h1 class="title">PROJET GENIE </br> LOGICIEL</h1>
@@ -77,7 +79,7 @@
     <footer class="footer">
         <p>Site créé par Sami :)</p>
     </footer>
-
+    </div>
     <script src="js/workspages.js"></script>
 </body>
 </html>
