--- a/projets/jeu-nsi.html
+++ b/projets/jeu-nsi.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/workspages.css">
     <style>
         * {color: white; }
+        body{background-color: #1a1818;}
+        
         .title{color: #1a1818;}
         .roles span{color: #ffffff;}
         .roles p{color: #ffffff;}
@@ -20,9 +22,12 @@
         .brown-rectangle{background-color: #d5c4fc;}
         .initial-section{background-color: #1a1818;}
         .footer{background-color: #1a1818;}
+        .sidebar a::before {background-color: #ffffff;}
+        .divider{background-color: #ffffff;}
     </style>
 </head>
 <body>
+    <div class="container">
     <div class="initial-section">
         <div class="brown-rectangle"></div>
         <h1 class="title">SERIOUS GAME </br> L'ANTI-CASINO</h1>
@@ -85,7 +90,7 @@
     <footer class="footer">
         <p>Site créé par Sami :)</p>
     </footer>
-
+    </div>
     <script src="js/workspages.js"></script>
 </body>
 </html>
