--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sami SAOUD</title>
-    <link rel="icon" type="image/png" href="imgs/favicon.png" />
-    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
-    <link rel="stylesheet" href="css/contact.css">
-</head>
-<body>
-    <div class="container" id="main-content">
-        <div class="sidebar">
-            <div class="sidebar-content">
-                <a href="index.html"><p class="vertical-text">ACCUEIL</p></a> 
-                <hr class="divider">
-                <p class="vertical-text">© 2024</p>
-            </div>
-        </div>
-        <div class="content">
-            <h1 class="hello">Contact</h1>
-            <p class="subtext">Étudiant à la recherche de nouvelles opportunités et de projets. <br> N’hésitez pas à me contacter pour en discuter !</p>
-
-            <div class="contact">
-                <p>Email : <a href="mailto:samisaoud.pro@gmail.com"><u>samisaoud.pro@gmail.com</u></a></p>
-                
-            </div>
-        </div>
-    </div>
-    <script src="js/contact.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="css/contact.css"></head><body><div class="container" id="main-content"><div class="sidebar"><div class="sidebar-content"><a href="index.html"><p class="vertical-text">ACCUEIL</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content"><h1 class="hello">Contact</h1><p class="subtext">Étudiant à la recherche de nouvelles opportunités et de projets.<br><br>N’hésitez pas à me contacter pour en discuter !</p><div class="contact"><p>Email :</p><p></p><a href="mailto:samisaoud.pro@gmail.com"><u>samisaoud.pro@gmail.com</u></a></div></div></div><script src="js/contact.js"></script></body></html>
