--- a/projets/portfolio-website.html
+++ b/projets/portfolio-website.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sami SAOUD</title>
-    <link rel="icon" type="image/png" href="../imgs/favicon.png" />
-    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
-    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
-    <link rel="stylesheet" href="../css/workspages.css">
-
-    <style>
-        * {color: white; }
-        body{background-color: #1a1818;}
-        .title{color: #1a1818;}
-        .roles span{color: #ffffff;}
-        .roles p{color: #ffffff;}
-        .content-section{background-color: #1a1818;}
-        .image-gallery{background-color: #1a1818;}
-        .image-description{background-color: #1a1818;}
-        .video-container{background-color: #1a1818;}
-        .brown-rectangle{background-color: #d5c4fc;}
-        .initial-section{background-color: #1a1818;}
-        .footer{background-color: #1a1818;}
-        .sidebar a::before {background-color: #ffffff;}
-        .divider{background-color: #ffffff;}
-    </style>
-</head>
-<body>
-    <div class="container">
-    <div class="initial-section">
-        <div class="brown-rectangle"></div>
-        <h1 class="title">SITE WEB </br> PORTFOLIO</h1>
-    </div>
-    <div class="sidebar">
-        <div class="sidebar-content">
-            <a href="../work.html"><p class="vertical-text">PROJETS</p></a> 
-            <hr class="divider">
-            <p class="vertical-text">© 2024</p>
-        </div>
-    </div>
-    <!-- Description and roles section -->
-    <div class="content-section">
-        <p class="description">Un site web portfolio <BR> vitrine, que j'ai créé pour m'améliorer <BR> en programmation CSS. </p>
-        <div class="roles">
-            <div class="role-item">
-                <span class="role-title">ROLE</span>
-                <p>Indépendant</p>
-            </div>
-            <div class="role-item">
-                <span class="role-title">RESPONSABILITES</span>
-                <p>Design, Programming</p>
-            </div>
-
-            <div class="role-item">
-                <span class="role-title">URL</span>
-                <p>HTML, CSS, JS</p>
-            </div>
-    </div>
-</div>
-
-    <!-- Bottom image gallery -->
-    <div class="image-gallery">
-        <img src="../imgs/portfolioImages/sitePortfolioCapture.png" alt="Image 1" class="large">
-    </div>
-
-    <div class="video-container">
-        <video autoplay loop muted playsinline style>
-            <source src="../imgs/portfolioImages/portfolio1.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas les vidéos HTML5.
-        </video>
-    </div>
-
-    <p class="image-description">Ce site m'a permis de découvrir les <strong>cartes</strong> ainsi que les <strong>sliders</strong>. <br> Une difficulté que j'ai réussi à relever, même avec mon peu de connaissances sur le sujet à ce moment donné !</p>
-    
-    <div class="video-container">
-        <video autoplay loop muted playsinline style>
-            <source src="../imgs/portfolioImages/portfolio2.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas les vidéos HTML5.
-        </video>
-    </div>
-    <p class="image-description">Une deuxième version du site créée avec un <strong>carousel</strong> d'images.  </p>
-
-    <footer class="footer">
-        <p>Site créé par Sami :)</p>
-    </footer>
-</div>
-    <script src="js/workspages.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="../imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css"><link rel="stylesheet" href="../css/workspages.css"><style>*{color:#fff}body{background-color:#1a1818}.title{color:#1a1818}.roles span{color:#fff}.roles p{color:#fff}.content-section{background-color:#1a1818}.image-gallery{background-color:#1a1818}.image-description{background-color:#1a1818}.video-container{background-color:#1a1818}.brown-rectangle{background-color:#d5c4fc}.initial-section{background-color:#1a1818}.footer{background-color:#1a1818}.sidebar a::before{background-color:#fff}.divider{background-color:#fff}</style></head><body><div class="container"><div class="initial-section"><div class="brown-rectangle"></div><h1 class="title">SITE WEBPORTFOLIO</h1></div><div class="sidebar"><div class="sidebar-content"><a href="../work.html"><p class="vertical-text">PROJETS</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content-section"><p class="description">Un site web portfolio<br>vitrine, que j'ai créé pour m'améliorer<br>en programmation CSS.</p><div class="roles"><div class="role-item"><span class="role-title">ROLE</span><p>Indépendant</p></div><div class="role-item"><span class="role-title">RESPONSABILITES</span><p>Design, Programming</p></div><div class="role-item"><span class="role-title">URL</span><p>HTML, CSS, JS</p></div></div></div><div class="image-gallery"><img src="../imgs/portfolioImages/sitePortfolioCapture.png" alt="Image 1" class="large"></div><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/portfolioImages/portfolio1.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Ce site m'a permis de découvrir les <strong>cartes</strong> ainsi que les <strong>sliders</strong>.<br>Une difficulté que j'ai réussi à relever, même avec mon peu de connaissances sur le sujet à ce moment donné !</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/portfolioImages/portfolio2.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Une deuxième version du site créée avec un <strong>carousel</strong> d'images.</p></div><script src="js/workspages.js"></script></body></html>
